# whattheframe

./: .gitignore  Cargo.toml  README.md  stylesheet.css
res/: stylesheet.css
src/: app_window.rs  frame.rs  frame_view.rs  frame_viewer.rs  main.rs  profile_data.rs  task_tree.rs  task_view.rs  views.rs
src/frame_view/: frame.rs  frame_threshold.rs  frame_timeline.rs  frame_view.rs  mod.rs  task_tree.rs
src/task_view/: task_view.rs
whattheframe/: Cargo.toml  build.rs
whattheframe/res/: resources.gresource.xml  stylesheet.css
whattheframe/src/: app_window.rs  main.rs  task_data.rs  task_object.rs  views.rs
whattheframe/src/frame_view/: frame.rs  frame_threshold.rs  frame_timeline.rs  frame_view.rs  mod.rs  task.rs  task_tree.rs
whattheframe/src/task_view/: mod.rs  task_view.rs
wtf/: Cargo.toml  LICENSE.txt
wtf/src/: lib.rs
