[package]
name = "whattheframe"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
libadwaita = { git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
