[package]
name = "whattheframe"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
libadwaita = { git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs" }
wtf = { path = "../wtf" }

[build-dependencies]
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }

[profile.release]
lto = true
