[package]
name = "wtf"
version = "0.1.0"
edition = "2018"

[features]
profile = ["chrono", "flume", "once_cell"]

[dependencies]
chrono = { version = "0.4", optional = true }
flume = { version = "0.10", optional = true }
once_cell = { version = "1.7", optional = true }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
snap = "1.0"
